Meal category margin

--- a/src/style/Meal.module.scss
+++ b/src/style/Meal.module.scss
@@ -129,6 +129,7 @@ $iconBackground: #404258;
   .selected-meal-category {
     color: #f8f9fa;
     font-size: 4.3vw;
+    margin: 1.5vw 0;
   }
 }
 .meal-categories + .meal-menus {
