--- a/src/style/Meal.module.scss
+++ b/src/style/Meal.module.scss
@@ -160,7 +160,7 @@ $iconBackground: #404258;
       .meal-menu__title {
         display: inline-block;
         font-size: 3.2vw;
-        background-color: lighten(#343a40, 15%);
+        background-color: #2e4f4f;
         padding: 1.8vw 1.3vw 1.3vw 2.6vw;
         border-radius: 3.3vw;
         text-align: center;
