Meal menu color change

--- a/src/style/Meal.module.scss
+++ b/src/style/Meal.module.scss
@@ -175,7 +175,7 @@ $iconBackground: #404258;
         background-color: #270082;
       }
       .SPECIAL {
-        background-color: #20615b;
+        background-color: #c07f00;
       }
       .KOREAN1,
       .KOREAN {
