--- a/src/style/Home.module.scss
+++ b/src/style/Home.module.scss
@@ -271,27 +271,56 @@ $fontColor: #f8f9fa; // 기본글자색
   margin-top: 3.33vw;
 }
 .home__links {
-  font-size: clamp(1px, 5.13vw, 22px);
-  a + a {
+  .home__links--row + .home__links--row {
     margin-top: 3.33vw;
   }
-  & > a {
+  .home__links--row {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 13vw;
-    max-height: 55px;
-    background-color: #413543;
-    border-radius: 10.26vw;
-    text-decoration: none;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-    &:active {
-      transform: scale(1.05);
-      -webkit-transform: scale(1.05); /* Webkit prefix */
-      -moz-transform: scale(1.05); /* Mozilla prefix */
-      -o-transform: scale(1.05); /* Opera prefix */
-      -ms-transform: scale(1.05); /* IE prefix */
+    a + a {
+      margin-left: 3.33vw;
+    }
+    & > a {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      width: 50%;
+      height: 43.59vw;
+      max-height: 200px;
+      background-color: lighten(#413543, 5%);
+      border-radius: 10.26vw;
+      text-decoration: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+      &:active {
+        transform: scale(1.05);
+        -webkit-transform: scale(1.05); /* Webkit prefix */
+        -moz-transform: scale(1.05); /* Mozilla prefix */
+        -o-transform: scale(1.05); /* Opera prefix */
+        -ms-transform: scale(1.05); /* IE prefix */
+      }
+      .home__link--title {
+        font-size: clamp(1px, 4.2vw, 22px);
+        letter-spacing: 3px;
+        font-weight: 900;
+        text-align: center;
+        margin-top: 20px;
+      }
+      .home__link--text {
+        font-size: clamp(1px, 3.3vw, 22px);
+        font-weight: 900;
+        margin-top: 5px;
+        text-align: center;
+      }
+      .home__link--image {
+        height: 90px;
+      }
+      .빵돌이오마카세 {
+        margin-bottom: 5px;
+      }
+      .버스 {
+        height: 70px;
+        margin: 10px 0;
+      }
     }
   }
 }
