--- a/src/style/Home.module.scss
+++ b/src/style/Home.module.scss
@@ -286,7 +286,7 @@ $fontColor: #f8f9fa; // 기본글자색
       width: 50%;
       height: 43.59vw;
       max-height: 200px;
-      background-color: lighten(#413543, 5%);
+      background-color: #413543;
       border-radius: 10.26vw;
       text-decoration: none;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
