meal api connect

--- a/src/style/Meal.module.scss
+++ b/src/style/Meal.module.scss
@@ -167,18 +167,17 @@ $iconBackground: #404258;
         letter-spacing: 0.4vw;
         font-weight: 900;
       }
-      .메뉴,
-      .PLUS {
+      .CONVENIENCE1,
+      .CONVENIENCE2 {
         background-color: #055e68;
       }
-      .비고 {
+      .CONVENIENCE3 {
         background-color: #270082;
       }
       .SPECIAL {
         background-color: #c07f00;
       }
-      .KOREAN1,
-      .KOREAN {
+      .KOREAN1 {
         background-color: #4e9f3d;
       }
       .KOREAN2 {
