--- a/src/style/NotificationBox.module.scss
+++ b/src/style/NotificationBox.module.scss
@@ -1,3 +1,5 @@
+@import '_utilities.scss';
+
 .bus__notification-wrapper {
   display: flex;
   flex-direction: column;
@@ -15,7 +17,7 @@
   max-width: 400px; // 갤럭시 폴드 대응
   height: 22vw;
   max-height: 100px; // 갤럭시 폴드 대응
-  background-color: darken(#cf7500, 15%);
+  background-color: darken($yellow-00, 15%);
   // border-radius: 25px;
   border-radius: clamp(1px, 6.41vw, 30px); // 갤럭시 폴드 대응
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
