--- a/src/style/Home.module.scss
+++ b/src/style/Home.module.scss
@@ -1,8 +1,4 @@
-$backColor1: #413543;
-$backColor2: #404258;
-$gray8: #343a40;
-$gray9: #212529; // 기본배경색
-$fontColor: #f8f9fa; // 기본글자색
+@import '_utilities.scss';
 
 .home {
   padding: 0;
@@ -11,14 +7,13 @@ $fontColor: #f8f9fa; // 기본글자색
   }
 }
 .title {
-  background-color: $gray9;
+  background-color: $gray-09;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  // margin-bottom: 15px;
   margin-bottom: clamp(1px, 3vw, 16px); // 갤럭시 폴드 대응
   .title__icon {
     display: -webkit-box;
@@ -35,7 +30,7 @@ $fontColor: #f8f9fa; // 기본글자색
     width: 11.54vw;
     max-width: 48px; // 갤럭시 폴드 대응
     border-radius: clamp(1px, 5.13vw, 22px); // 갤럭시 폴드 대응
-    background-color: $backColor2;
+    background-color: $blue-00;
     margin-left: clamp(1px, 3.85vw, 27px); // 갤럭시 폴드 대응
     margin-right: clamp(1px, 3.85vw, 16px); // 갤럭시 폴드 대응
   }
@@ -60,8 +55,8 @@ $fontColor: #f8f9fa; // 기본글자색
       width: 100%;
       height: 100%;
       position: absolute;
-      background-color: $gray8;
-      color: $fontColor;
+      background-color: $gray-08;
+      color: $gray-00;
       top: 0;
       left: 0;
       opacity: 0;
@@ -79,7 +74,7 @@ $fontColor: #f8f9fa; // 기본글자색
   }
 }
 .home__weather {
-  background-color: #343a40;
+  background-color: $gray-08;
   height: 55vw;
   width: 100%;
   border-radius: 10.26vw;
@@ -122,7 +117,7 @@ $fontColor: #f8f9fa; // 기본글자색
     width: 58%;
     height: 87%;
     border-radius: 7vw;
-    background-color: #495057;
+    background-color: $gray-07;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     display: flex;
     justify-content: center;
@@ -201,14 +196,11 @@ $fontColor: #f8f9fa; // 기본글자색
   display: flex;
   justify-content: center;
   .home__dust + .home__ultra-dust {
-    // margin-left: 13px;
     margin-left: 3.33vw;
   }
   .home__dust,
   .home__ultra-dust {
-    // border-radius: 40px;
     border-radius: 10.26vw;
-    // height: 170px;
     height: 43.59vw;
     max-height: 200px; // 갤럭시 폴드 대응
     width: 50%;
@@ -250,22 +242,22 @@ $fontColor: #f8f9fa; // 기본글자색
   }
 }
 .조회중 {
-  background-color: $gray8;
+  background-color: $gray-08;
 }
 .통신장애 {
-  background-color: $gray8;
+  background-color: $gray-08;
 }
 .좋음 {
-  background-color: #30475e;
+  background-color: $blue-01;
 }
 .보통 {
-  background-color: #2e4f4f;
+  background-color: $green-00;
 }
 .나쁨 {
-  background-color: #cf7500;
+  background-color: $yellow-00;
 }
 .최악 {
-  background-color: #a80038;
+  background-color: $red-00;
 }
 .home__links {
   display: flex;
@@ -279,7 +271,7 @@ $fontColor: #f8f9fa; // 기본글자색
     width: calc(50% - (3.33vw / 2));
     height: 43.59vw;
     max-height: 200px;
-    background-color: #413543;
+    background-color: $purple-00;
     border-radius: 10.26vw;
     text-decoration: none;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
@@ -356,7 +348,7 @@ $fontColor: #f8f9fa; // 기본글자색
       font-weight: 900;
       letter-spacing: 0.51vw;
       padding: clamp(1px, 1.79vw, 8px);
-      border: 1px solid #f8f9fa;
+      border: 1px solid $gray-00;
       -moz-border-radius: 1.28vw;
       -webkit-border-radius: 1.28vw;
       border-radius: 1.28vw;
