--- a/src/style/PopUpMap.module.scss
+++ b/src/style/PopUpMap.module.scss
@@ -1,4 +1,4 @@
-$gray-00: #f8f9fa; // 기본글자색
+@import '_utilities.scss';
 
 .pop-up-map {
   display: -webkit-flex; /* 웹킷 */
@@ -38,10 +38,8 @@ $gray-00: #f8f9fa; // 기본글자색
     .pop-up-map__close {
       font-size: clamp(1px, 3.85vw, 16px); // 갤럭시 폴드 대응
       font-weight: 900;
-      // letter-spacing: 2px;
       letter-spacing: 0.51vw;
       margin-top: clamp(1px, 2.5vw, 11px); // 갤럭시 폴드 대응
-      // padding: 7px;
       padding: clamp(1px, 1.79vw, 8px);
       border: 1px solid $gray-00;
       -moz-border-radius: 1.28vw;
