--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,7 @@
-$gray09: #212529; // 기본배경색
+@import '_utilities.scss';
+
 body {
-  background-color: $gray09;
+  background-color: $gray-09;
   -webkit-scroll-behavior: smooth;
   scroll-behavior: smooth; // 부드러운 스크롤 효과
 }
