--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -7,11 +7,21 @@
   font-weight: normal;
   font-style: normal;
 }
+body {
+  background-color: $gray-09;
+  -webkit-scroll-behavior: smooth;
+  scroll-behavior: smooth; // 부드러운 스크롤 효과
+}
 #root {
   -webkit-font-smoothing: antialiased; // webkit(크롬, 사파리) 글자 부드럽게
   -moz-osx-font-smoothing: grayscale; // 파이어폭스 글자 부드럽게
   font-family: 'DungGeunMo', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   color: $gray-00;
+  @include tablet {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 /* a태그 설정 초기화 */
 a,
