--- a/src/style/PopUpMap.module.scss
+++ b/src/style/PopUpMap.module.scss
@@ -1,7 +1,7 @@
 @import '_utilities.scss';
 
 .pop-up-map {
-  display: -webkit-flex; /* 웹킷 */
+  display: -webkit-flex; // 웹킷
   display: flex;
   justify-content: center;
   .pop-up-map__mask {
@@ -20,11 +20,11 @@
     top: 0;
     height: 100vh;
     z-index: 100;
-    display: -webkit-flex; /* 웹킷 */
+    display: -webkit-flex; // 웹킷
     display: flex;
-    -webkit-flex-direction: column; /* 웹킷 */
+    -webkit-flex-direction: column; // 웹킷
     flex-direction: column;
-    -webkit-align-items: center; /* 웹킷 */
+    -webkit-align-items: center; // 웹킷
     align-items: center;
     .pop-up-map__location {
       padding: 0 10vw;
