--- a/src/style/Footer.module.scss
+++ b/src/style/Footer.module.scss
@@ -9,4 +9,10 @@
   margin-top: 3.33vw;
   border-top: 1px solid $gray-08;
   color: $gray-06;
+  @include desktop {
+    max-height: none;
+    width: 100%;
+    height: 65px;
+    margin-top: 40px;
+  }
 }
