--- a/src/style/Home.module.scss
+++ b/src/style/Home.module.scss
@@ -2,8 +2,18 @@
 
 .home {
   padding: 0;
+  @include desktop {
+    width: 100%;
+    max-width: 950px;
+  }
   .home__body {
     padding: 0 3.33vw;
+    @include desktop {
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 10px;
+    }
   }
 }
 .title {
@@ -15,6 +25,9 @@
   -ms-flex-align: center;
   align-items: center;
   margin-bottom: clamp(1px, 3vw, 16px); // 갤럭시 폴드 대응
+  @include desktop {
+    margin-bottom: 25px;
+  }
   .title__icon {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -33,6 +46,24 @@
     background-color: $blue-00;
     margin-left: clamp(1px, 3.85vw, 27px); // 갤럭시 폴드 대응
     margin-right: clamp(1px, 3.85vw, 16px); // 갤럭시 폴드 대응
+    @include desktop {
+      background-color: transparent;
+      height: auto;
+      width: auto;
+      max-height: none;
+      max-width: none;
+      border-radius: 0;
+      margin-left: 30px;
+      margin-right: 10px;
+    }
+    > img {
+      height: 5.64vw;
+      max-height: 22px;
+      @include desktop {
+        height: 20px;
+        max-height: none;
+      }
+    }
   }
   .title__select {
     position: relative;
@@ -40,6 +71,9 @@
     align-items: center;
     .title__letter {
       font-size: clamp(1px, 5.38vw, 25px); // 갤럭시 폴드 대응
+      @include desktop {
+        font-size: 20px;
+      }
     }
     select {
       font-size: clamp(1px, 4vw, 15px); // 갤럭시 폴드 대응
@@ -61,6 +95,9 @@
       left: 0;
       opacity: 0;
       cursor: pointer;
+      @include desktop {
+        font-size: 20px;
+      }
     }
     .title__select-button {
       width: 2vw;
@@ -70,6 +107,11 @@
       align-items: center;
       justify-content: space-between;
       cursor: pointer;
+      @include desktop {
+        width: 8px;
+        max-width: none;
+        margin-left: 10px;
+      }
     }
   }
 }
@@ -81,6 +123,12 @@
   display: flex;
   align-items: center;
   position: relative;
+  @include desktop {
+    width: calc(68vw - 40px);
+    max-width: 605.7px;
+    height: 300px;
+    border-radius: 35px;
+  }
   .home__weather--now {
     width: 38%;
     display: flex;
@@ -94,27 +142,46 @@
       .home__weather--now-temperature-img {
         height: 23vw;
         margin-bottom: 2.56vw;
+        @include desktop {
+          height: clamp(1px, 15.8vw, 150px);
+          margin-bottom: 10px;
+        }
       }
       .home__weather--now-temperature-text {
         font-size: 7.69vw; // 갤럭시 폴드 대응
+        @include desktop {
+          font-size: 35px;
+          letter-spacing: 5px;
+        }
       }
     }
     .home__weather--now-rain {
       display: flex;
       align-items: center;
       margin-top: 0.8vw;
+      @include desktop {
+        margin-top: 10px;
+      }
       .home__weather--now-rain-img {
         height: 3.85vw;
+        @include desktop {
+          height: 30px;
+        }
       }
       .home__weather--now-rain-text {
         margin-left: 1.28vw;
         font-size: 5.13vw;
         letter-spacing: 0.5vw;
+        @include desktop {
+          margin-left: 10px;
+          font-size: 35px;
+          letter-spacing: 8px;
+        }
       }
     }
   }
   .home__weather--forecasts-wrapper {
-    width: 58%;
+    width: calc(58% - 3.71vw);
     height: 87%;
     border-radius: 7vw;
     background-color: $gray-07;
@@ -122,19 +189,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-right: 2.23vw;
+    padding-left: 1.48vw;
+    @include desktop {
+      width: calc(58% - 33px);
+      padding-right: 18px;
+      padding-left: 15px;
+      border-radius: 35px;
+    }
     .home__weather--forecasts {
       height: 87%;
       width: 100%;
-      /* 세로 스크롤 기능 자동 동작 */
-      overflow-x: scroll;
-      /* 스크롤바 안보이기  */
-      -ms-overflow-style: none; /*익스플로러*/
-      scrollbar-width: none; /*파이어폭스*/
+      overflow-y: scroll; // 세로 스크롤
       &::-webkit-scrollbar {
-        display: none; /* 크롬, 사파리, 오페라, 엣지 */
+        width: 5px; // 스크롤바의 너비
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 30px;
+        background: $gray-06;
       }
       .home__weather--forecast + .home__weather--forecast {
         margin-top: 2.82vw;
+        @include desktop {
+          margin-top: 10px;
+        }
       }
       .home__weather--forecast {
         display: flex;
@@ -144,22 +222,46 @@
           font-size: 2.56vw;
           font-weight: 900;
           width: 14vw;
+          @include desktop {
+            font-size: clamp(1px, 2.11vw, 20px);
+            width: auto;
+            margin-right: clamp(1px, 2.63vw, 15px);
+            letter-spacing: 3px;
+          }
         }
         .home__weather--forecast-sky-icon {
           width: 6.41vw;
           margin-right: 1.28vw;
+          @include desktop {
+            width: clamp(1px, 3.2vw, 30px);
+            margin-right: clamp(1px, 1vw, 10px);
+          }
         }
         .home__weather--forecast-temperature {
           font-size: 3.85vw;
           width: 10.26vw;
+          @include desktop {
+            font-size: clamp(1px, 1.9vw, 18px);
+            width: auto;
+            margin-right: clamp(1px, 2.63vw, 15px);
+          }
         }
         .home__weather--forecast-rain-img {
           margin-right: 1.28vw;
           width: 5.13vw;
+          @include desktop {
+            width: clamp(1px, 3.2vw, 30px);
+            margin-right: clamp(1px, 1vw, 10px);
+          }
         }
         .home__weather--forecast-rain-text {
           font-size: 3.85vw;
           width: 6vw;
+          @include desktop {
+            font-size: clamp(1px, 1.9vw, 18px);
+            letter-spacing: 2px;
+            width: auto;
+          }
         }
       }
     }
@@ -173,30 +275,39 @@
     height: 9vw;
     max-height: 45px; // 갤럭시 폴드 대응
     transition: all 80ms ease-in-out;
-    -webkit-transition: all 80ms ease-in-out; /* Webkit prefix */
-    -moz-transition: all 80ms ease-in-out; /* Mozilla prefix */
-    -o-transition: all 80ms ease-in-out; /* Opera prefix */
-    -ms-transition: all 80ms ease-in-out; /* IE prefix */
+    -webkit-transition: all 80ms ease-in-out; // Webkit prefix
+    -moz-transition: all 80ms ease-in-out; // Mozilla prefix
+    -o-transition: all 80ms ease-in-out; // Opera prefix
+    -ms-transition: all 80ms ease-in-out; // IE prefix
+    @include desktop {
+      display: none;
+    }
     &:hover {
       cursor: pointer;
     }
     &:active {
       transform: scale(1.3);
-      -webkit-transform: scale(1.3); /* Webkit prefix */
-      -moz-transform: scale(1.3); /* Mozilla prefix */
-      -o-transform: scale(1.3); /* Opera prefix */
-      -ms-transform: scale(1.3); /* IE prefix */
+      -webkit-transform: scale(1.3); // Webkit prefix
+      -moz-transform: scale(1.3); // Mozilla prefix
+      -o-transform: scale(1.3); // Opera prefix
+      -ms-transform: scale(1.3); // IE prefix
     }
   }
 }
 .home__weather + .home__dusts {
   margin-top: 3.33vw;
+  @include desktop {
+    margin-top: 0px;
+  }
 }
 .home__dusts {
   display: flex;
   justify-content: center;
   .home__dust + .home__ultra-dust {
     margin-left: 3.33vw;
+    @include desktop {
+      margin-left: 10px;
+    }
   }
   .home__dust,
   .home__ultra-dust {
@@ -204,16 +315,23 @@
     height: 43.59vw;
     max-height: 200px; // 갤럭시 폴드 대응
     width: 50%;
-    display: -webkit-box; /* Webkit */
-    display: -moz-box; /* Mozilla */
+    display: -webkit-box; // Webkit
+    display: -moz-box; // Mozilla
     display: flex;
-    -webkit-box-orient: vertical; /* Webkit */
-    -webkit-box-direction: normal; /* Webkit */
-    -moz-box-orient: vertical; /* Mozilla */
-    -moz-box-direction: normal; /* Mozilla */
+    -webkit-box-orient: vertical; // Webkit
+    -webkit-box-direction: normal; // Webkit
+    -moz-box-orient: vertical; // Mozilla
+    -moz-box-direction: normal; // Mozilla
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @include desktop {
+      margin-left: 10px;
+      border-radius: 35px;
+      height: 300px;
+      max-height: none;
+      width: clamp(1px, 16vw, 152px);
+    }
   }
   .home__dust--title,
   .home__ultra-dust--title {
@@ -223,6 +341,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @include desktop {
+      margin-bottom: 25px;
+      font-size: clamp(1px, 2.6vw, 23px);
+    }
   }
   .home__dust--img-letter-wrapper,
   .home__ultra-dust--img-letter-wrapper {
@@ -238,6 +360,10 @@
     .home__ultra-dust--level {
       margin-top: 3.85vw;
       font-size: clamp(1px, 4.36vw, 22px);
+      @include desktop {
+        margin-top: 25px;
+        font-size: clamp(1px, 2.6vw, 23px);
+      }
     }
   }
 }
@@ -263,6 +389,9 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  @include desktop {
+    display: none;
+  }
   & > a,
   .home__link--bread {
     display: flex;
@@ -278,10 +407,10 @@
     margin-top: 3.33vw;
     &:active {
       transform: scale(1.05);
-      -webkit-transform: scale(1.05); /* Webkit prefix */
-      -moz-transform: scale(1.05); /* Mozilla prefix */
-      -o-transform: scale(1.05); /* Opera prefix */
-      -ms-transform: scale(1.05); /* IE prefix */
+      -webkit-transform: scale(1.05); // Webkit prefix
+      -moz-transform: scale(1.05); // Mozilla prefix
+      -o-transform: scale(1.05); // Opera prefix
+      -ms-transform: scale(1.05); // IE prefix
     }
     .home__link--title {
       font-size: clamp(1px, 4.2vw, 21px);
@@ -312,8 +441,33 @@
     }
   }
 }
+.home__body-sec {
+  display: none;
+  @include desktop {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 10px 0 10px;
+  }
+  .home__body-sec--bread {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    .body-sec__bread--title {
+      font-size: 25px;
+    }
+    .body-sec__bread--img {
+      width: 300px;
+      border-radius: 35px;
+    }
+    .body-sec__bread--text {
+      font-size: 20px;
+    }
+  }
+}
+
 .home__pop-up-bread {
-  display: -webkit-flex; /* 웹킷 */
+  display: -webkit-flex; // 웹킷
   display: flex;
   justify-content: center;
   .home__pop-up-bread--mask {
