--- a/src/style/Meal.module.scss
+++ b/src/style/Meal.module.scss
@@ -1,5 +1,10 @@
 @import '_utilities.scss';
 
+.meal {
+  @include desktop {
+    max-width: 950px;
+  }
+}
 .title {
   background-color: $gray-09;
   display: -webkit-box;
@@ -71,13 +76,13 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  /* 가로 스크롤 기능 자동 동작 */
+  // 가로 스크롤 기능 자동 동작
   overflow-y: scroll;
-  /* 스크롤바 안보이기  */
-  -ms-overflow-style: none; /*익스플로러*/
-  scrollbar-width: none; /*파이어폭스*/
+  // 스크롤바 안보이기
+  -ms-overflow-style: none; //익스플로러
+  scrollbar-width: none; //파이어폭스
   &::-webkit-scrollbar {
-    display: none; /* 크롬, 사파리, 오페라, 엣지 */
+    display: none; // 크롬, 사파리, 오페라, 엣지
   }
   button + button {
     margin-left: 2.6vw;
