--- a/src/style/MenuBox.module.scss
+++ b/src/style/MenuBox.module.scss
@@ -1,7 +1,7 @@
 @import '_utilities.scss';
 
 .menu-box {
-  display: -webkit-flex; /* 웹킷 */
+  display: -webkit-flex; // 웹킷
   display: flex;
   justify-content: center;
 }
@@ -18,11 +18,11 @@
   position: fixed;
   top: 30vh;
   z-index: 100;
-  display: -webkit-flex; /* 웹킷 */
+  display: -webkit-flex; // 웹킷
   display: flex;
-  -webkit-flex-direction: column; /* 웹킷 */
+  -webkit-flex-direction: column; // 웹킷
   flex-direction: column;
-  -webkit-align-items: center; /* 웹킷 */
+  -webkit-align-items: center; // 웹킷
   align-items: center;
   font-size: clamp(1px, 10.26vw, 43px); // 갤럭시 폴드 대응
   letter-spacing: 0.51vw;
@@ -33,16 +33,16 @@
   margin-bottom: clamp(1px, 2.56vw, 12px); // 갤럭시 폴드 대응
   text-decoration: none;
   transition: all 50ms ease-in-out;
-  -webkit-transition: all 50ms ease-in-out; /* Webkit prefix */
-  -moz-transition: all 50ms ease-in-out; /* Mozilla prefix */
-  -o-transition: all 50ms ease-in-out; /* Opera prefix */
-  -ms-transition: all 50ms ease-in-out; /* IE prefix */
+  -webkit-transition: all 50ms ease-in-out; // Webkit prefix
+  -moz-transition: all 50ms ease-in-out; // Mozilla prefix
+  -o-transition: all 50ms ease-in-out; // Opera prefix
+  -ms-transition: all 50ms ease-in-out; // IE prefix
   &:active {
     transform: scale(1.3);
-    -webkit-transform: scale(1.3); /* Webkit prefix */
-    -moz-transform: scale(1.3); /* Mozilla prefix */
-    -o-transform: scale(1.3); /* Opera prefix */
-    -ms-transform: scale(1.3); /* IE prefix */
+    -webkit-transform: scale(1.3); // Webkit prefix
+    -moz-transform: scale(1.3); // Mozilla prefix
+    -o-transform: scale(1.3); // Opera prefix
+    -ms-transform: scale(1.3); // IE prefix
   }
 }
 // 활성화된 라우터 표시
@@ -53,16 +53,16 @@
   text-decoration-style: double;
   text-decoration-thickness: clamp(1px, 0.38vw, 1.6px); // 갤럭시 폴드 대응
   transition: all 50ms ease-in-out;
-  -webkit-transition: all 50ms ease-in-out; /* Webkit prefix */
-  -moz-transition: all 50ms ease-in-out; /* Mozilla prefix */
-  -o-transition: all 50ms ease-in-out; /* Opera prefix */
-  -ms-transition: all 50ms ease-in-out; /* IE prefix */
+  -webkit-transition: all 50ms ease-in-out; // Webkit prefix
+  -moz-transition: all 50ms ease-in-out; // Mozilla prefix
+  -o-transition: all 50ms ease-in-out; // Opera prefix
+  -ms-transition: all 50ms ease-in-out; // IE prefix
   &:active {
     transform: scale(1.3);
-    -webkit-transform: scale(1.3); /* Webkit prefix */
-    -moz-transform: scale(1.3); /* Mozilla prefix */
-    -o-transform: scale(1.3); /* Opera prefix */
-    -ms-transform: scale(1.3); /* IE prefix */
+    -webkit-transform: scale(1.3); // Webkit prefix
+    -moz-transform: scale(1.3); // Mozilla prefix
+    -o-transform: scale(1.3); // Opera prefix
+    -ms-transform: scale(1.3); // IE prefix
   }
 }
 .menu-box__exit {
